<resources>
    <string name="app_name">FinalProj</string>
    <string name="user_login">User Login</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Title">Future App Name</string>
    <string name="Create_Character">Create New Character</string>
    <string name="View_Characters">View Characters</string>
    <string name="Review_Rules">Review Rules</string>
    <string name="Password_Confirm">Confirm Password</string>
    <string name="Passwor">Confirm Password</string>
    <string name="ForgotPassword"><u>Forgot Password?</u></string>
    <string name="ForgottenPasswordTxt">Please enter your email and well send you a password reset link</string>
    <string name="Send">Send</string>
    <string name="Cancel">Cancel</string>
</resources>